--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "multer": "^1.4.5-lts.1",
     "streamifier": "^0.1.1",
     "express-handlebars": "^6.0.6",
-    "strip-js": "^1.2.0"
+    "strip-js": "^1.2.0",
+    "pg": "^8.8.0",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.25.5"
   }
 }
