--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "streamifier": "^0.1.1",
     "express-handlebars": "^6.0.6",
     "strip-js": "^1.2.0",
+    "mongoose": "^6.7.3",
+    "bcryptjs": "^2.4.3",
+    "client-sessions": "^0.8.0",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.25.5"
